# stream-DaQ

./: .env  .gitignore  =1.6.0  LICENSE  README.md  docker-compose.yaml  environment.yml  example.py  example_basic.py  example_custom_connector.py  pyproject.toml  requirements.txt  setup-kafka.sh  setup.py  test_schema_validation.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml  tests.yml
bytewax/: data.csv  data_generator.py  live_plotter.py  statistics_manager.py
bytewax/examples/: basic.py  click_through_rate.py  collecting.py  windowing.py
bytewax/experiments/: data_generator.py  live_plotter.py  statistics_manager.py
datasets/: inject_timestamps.py  streaming_viewership_data.csv  streaming_viewership_data_with_timestamps.csv
deequExperiments/: pom.xml
dockerfiles/: daq-reddit.Dockerfile  daq.Dockerfile  deequ-reddit.Dockerfile  deequ.Dockerfile  kafka-producer.Dockerfile  kafka.Dockerfile  output-consumer.Dockerfile  stream-reddit.Dockerfile  stream.Dockerfile
docs/: api-reference.rst  changelog.rst  compact-data-representation.md  conf.py  contributing.rst  example.rst  github-stars.rst  index.rst  introduction.rst  modules.rst  overview.rst  quacklity.rst  requirements_docs.txt  streamdaq.rst  why-stream-daq.rst
docs/_static/: styles.css
docs/_templates/: substitutions.rst
docs/concepts/: anomaly-detection.rst  compact-vs-native-data.rst  data-quality.rst  index.rst  logging.rst  measures-and-assessments.rst  multi-source-tasks.rst  real-time-monitoring.rst  schema-validation.rst  stream-windows.rst
docs/examples/: advanced-examples.rst  basic-examples.rst  index.rst  real-world-cases.rst  troubleshooting.rst
docs/getting-started/: first-monitoring.rst  index.rst  installation.rst  quickstart.rst
docs/user-guide/: assessment-functions.rst  configuration.rst  index.rst  measures.rst  migration-guide.rst  output-handling.rst
dq_dashboard/: gif_maker.py
examples/: anomaly_detection.py  basic.py  compact.py  compact_data.py  critical_task_handling.py  custom_connector.py  hello_world.py  logging_configuration.py  mixed_api_usage.py  mqtt_compact_example.py  multi_source_monitoring.py  multiple_sources.py  page_views.py  production_mqtt_example.py  schema_validation.py  schema_validation_example.py  service_example.py  trend_analysis.py  trend_analysis_demo.py  validation_example.py  web_page_example.py  window_aggregation_example.py
examples/data/: sensor_data.jsonl
examples/live_plotting/: data_gen.py
faust/: data.csv  live_plotter.py
faust/Model/: DataPoint.py
faust/examples/: adder.py  command_example.py  leader.py  page_views.py  send_to_adder.py
faust/experiments/: data.csv  data_bytewax_1.csv  data_faust_1.csv  data_file_initializer.py  data_generator.py  live_plotter.py  statistics_manager.py  visualize_plots.py
first-try/: data.csv  data_generator.py  live_plotter.py  statistics_manager.py
first-try/Model/: DataPoint.py  WindowProfiler.py
framework-comparisons/: .gitignore  configurations.py  configurations.yaml  kafka_consumer.py  kafka_producer.py  pathway_simple.py  simple_bytewax.py  simple_faust.py  simple_pathway.py  simple_quix.py  utils.py
framework-comparisons/config/: configurations.py  configurations.yaml
kafka/: kafka-entrypoint.sh  kafka_producer.py  log4j.properties
kafka/scripts/: kafka-entrypoint.sh
output_consumer/: output_consumer.py
pathway/: DaQMeasures.py  DaQMeasuresFactory.py  StreamDaQ.py  Windows.py  artificial_stream_generators.py  main.py  scalability_experiment.py  scalability_experiment_reddit.py  statistics_manager.py
pathway/_custom_reducers/: CustomReducers.py
pathway/examples/: artificial_stream_generators.py  tumbling_window.py
pathway/first_try_pathway_cookiecutter/: Dockerfile  README.md  local.yml  prod.yml  run.py
pathway/thresholds/: Check.py  Threshold.py
requirements/: requirements_daq.txt  requirements_kafka_producer.txt  requirements_output_consumer.txt
scripts/: README_before_bump.md  bump_version.py  major.sh  minor.sh  release.sh
storage/: RedisConnector.py  StorageConnector.py
stream/: kafka_stream_generation.py  kafka_stream_generation_reddit.py
streamdaq/: CompactData.py  CustomReducers.py  DaQMeasures.py  SchemaValidator.py  StreamDaQ.py  Task.py  ValidationSchema.py  Windows.py  __init__.py  artificial_stream_generators.py  compact_converter.py  logging_config.py  main.py  mqtt_connectors.py  utils.py
(+27 files in other folders)
