[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamdaq"
version = "0.4.0"
description = "Plug-and-play real-time quality monitoring for data streams!"
authors = [
    {name = "Vassilis Papastergios", email = "papster@csd.auth.gr"},
    {name = "George Atmatzidis", email = "gatmatza@csd.auth.gr},
    {name = "Apostolos Giannoulidis"},
    {name = "Anastasios Gounaris", email = "gounaria@csd.auth.gr"}
]
maintainers = [
    {name = "Vassilis Papastergios", email = "papster@csd.auth.gr"},
    {name = "George Atmatzidis"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["data-quality", "streaming", "real-time", "monitoring", "data-engineering"]
dependencies = [
    "pathway~=0.26.*",
    "matplotlib==3.10.1",
    "python-dateutil==2.9.0.post0",
    "datasketch~=1.6.5",
    "datasketches~=5.1.0"
]

[project.urls]
Homepage = "https://bilpapster.github.io/stream-DaQ/"
Documentation = "https://bilpapster.github.io/stream-DaQ/"
Repository = "https://github.com/Bilpapster/stream-DaQ"
"Bug Tracker" = "https://github.com/Bilpapster/stream-DaQ/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.10",
    "flake8>=5.0",
    "mypy>=1.0",
    "pre-commit>=2.20"
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-design>=0.6.1",
    "sphinx-book-theme>=1.1.4",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxawesome-theme>=5.3.2"
]

[tool.setuptools]
packages = ["streamdaq"]

[tool.setuptools.package-dir]
streamdaq = "streamdaq"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,W503"

[tool.mypy]
python_version = "0.4.0"
warn_return_any = true
warn_unused_configs = true